--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "kepi",
-  "version": "0.2.1",
+  "version": "1.0.0",
   "description": "lightweight HTTP headers",
   "main": "kepi.js",
   "scripts": {
     "test": "nyc --reporter=lcov tape test/test.js",
     "coverage": "nyc --reporter=text-lcov report | coveralls"
+  },
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/MorganConrad/kepi.git"
   },
   "keywords": [
     "HTTP",
@@ -19,5 +23,9 @@
     "coveralls": "^3.0"
   },
   "author": "Morgan Conrad <morgan@morganconrad.com> (http://morganconrad.com/)",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/MorganConrad/kepi/issues"
+  },
+  "homepage": "https://github.com/MorganConrad/kepi#readme"
 }
